--- a/src/styles/wallPage.css
+++ b/src/styles/wallPage.css
@@ -8,13 +8,13 @@
   position: relative; }
   .wallPage_headerBox {
     width: 100%;
-    max-width: 700px;
     min-height: 50px;
     padding: 0 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: space-between;
     background: #ECE7F1;
     position: fixed;
@@ -26,7 +26,7 @@
   .wallPage_wallPost {
     width: 100%;
     max-width: 700px;
-    margin-top: 60px;
+    margin: 60px 0;
     gap: 20px;
     display: flex;
     align-items: center;
@@ -34,13 +34,12 @@
     flex-direction: column; }
   .wallPage_footerMenu {
     width: 100%;
-    max-width: 750px;
     min-height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    gap: 70px;
+    justify-content: space-around;
     background: #3B007A;
     position: fixed;
     bottom: 0; }
@@ -49,10 +48,13 @@
 
 .postContainer {
   width: 100%;
+  max-width: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding: 20px 0;
+  gap: 20px;
   box-shadow: #d9d9d9 0px 3px 12px; }
   .postContainer_headerPost {
     width: 100%;
@@ -84,6 +86,71 @@
   .postContainer_icon {
     width: 20px;
     height: 20px; }
+  .postContainer_postImage {
+    width: 100%;
+    max-width: 400px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f7f7f769; }
   .postContainer_postImage--img {
     width: 100%;
-    padding-bottom: 5px; }
+    height: 100%; }
+
+.sideMenu {
+  width: 70%;
+  max-width: 600px;
+  min-height: 100vh;
+  /* max-height: 100vh; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 40px;
+  background: #ece7f1b2;
+  color: #5F15AD;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  transition: all 0.4s; }
+  .sideMenu_hidden {
+    min-height: 0px;
+    max-height: 0px; }
+  .sideMenu_exitMenu {
+    width: 20px;
+    max-width: 40px;
+    min-height: 20px;
+    max-height: 40px;
+    position: absolute;
+    top: 20px;
+    right: 20px; }
+  .sideMenu_usernameBox {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px; }
+  .sideMenu_menu {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 10px; }
+  .sideMenu_optionBox {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 5px; }
+    .sideMenu_optionBox--img {
+      width: 30px;
+      max-width: 50px;
+      min-height: 30px;
+      max-height: 50px; }
