--- a/src/sass/landingPage.scss
+++ b/src/sass/landingPage.scss
@@ -13,38 +13,29 @@
         background-color: #fff;
         
     }
-
-    &_header--nav{
-        width: 100%;
-        @include flex-column-row;
-        justify-content: space-between;
-
+    &_header--icon{
+        justify-content: center;
+        align-items: center;
+        margin-left: 20px;
+        color: #5F15AD;
+    
     }
 
-    // &_nav
-    // &_header--icon{
-    //     justify-content: center;
-    //     align-items: center;
-    //     margin-left: 20px;
-    //     color: #5F15AD;
-    
-    // }
+    &_header--logo{
+        width: 20%;
+        height: 50px;
+        max-width: 80px;
+    }
 
-    // &_header--logo{
-    //     width: 20%;
-    //     height: 50px;
-    //     max-width: 80px;
-    // }
-
-    // &_header--sing{
-    //     width: 25%;
-    //     font-size: 12px;
-    //     font-weight: 300;
-    //     background-color: #fff;
-    //     color: #5F15AD;
-    //     border: none;
-    //     font-family: sans-serif;
-    // }
+    &_header--sing{
+        width: 25%;
+        font-size: 12px;
+        font-weight: 300;
+        background-color: #fff;
+        color: #5F15AD;
+        border: none;
+        font-family: sans-serif;
+    }
 
     &_main{
         width: 80%;
@@ -67,87 +58,6 @@
         @include flex-column-center;
     }
 }   
-
-.nav{
-
-    &_menuLogo{
-        width: 50%;
-        height: 50px;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-    }
-    
-    &menuLogo--img{
-        height: 50px;
-        max-width: 50px;
-    }
-
-    &menuLogo--abrirMenu {
-        width: 25%;
-        border: none;
-        background-color: #fff;
-        flex-direction: row-reverse;
-        cursor: pointer;
-        opacity: 1;
-        pointer-events: all;
-    
-    }
-
-    &_sing{
-        width: 25%;
-        font-size: 12px;
-        font-weight: 300;
-        background-color: #fff;
-        color: #5F15AD;
-        border: none;
-        font-family: sans-serif;
-    }
-
-    
-    
-}
-
-.menu{
-    flex-direction: column;
-    position: fixed;
-    left: 0%;
-    top: 0%;
-    width: 100%;
-    align-items: center;
-    background-color: #000000;
-    height: 100%;
-    overflow-y: auto;
-
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s;
-
-    &_li{
-        padding: 0;
-    }
-
-    &_a{
-        color: #5F15AD;
-        line-height: 60px;
-    }
-
-    &_cerrarMenu{
-        display: block;
-        border: none;
-        background: none;
-        cursor: pointer;
-        align-self: flex-start;
-        padding: 20px 15px;
-    }
-    
-}
-
-.menuAbierto{
-    opacity: 1;
-    pointer-events: all;
-
-}
 
 .welcomeBox{
     &_container{
