--- a/src/styles/wallPage.css
+++ b/src/styles/wallPage.css
@@ -55,6 +55,7 @@
   flex-direction: column;
   padding: 20px 0;
   gap: 20px;
+  border-radius: 10px;
   box-shadow: #d9d9d9 0px 3px 12px; }
   .postContainer_headerPost {
     width: 100%;
@@ -97,60 +98,3 @@
   .postContainer_postImage--img {
     width: 100%;
     height: 100%; }
-
-.sideMenu {
-  width: 70%;
-  max-width: 400px;
-  min-height: 100vh;
-  /* max-height: 100vh; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 40px;
-  background: #ece7f1b2;
-  color: #5F15AD;
-  position: absolute;
-  left: 0;
-  top: 0;
-  overflow: hidden;
-  transition: all 0.4s; }
-  .sideMenu_hidden {
-    min-height: 0px;
-    max-height: 0px; }
-  .sideMenu_exitMenu {
-    width: 20px;
-    max-width: 40px;
-    min-height: 20px;
-    max-height: 40px;
-    position: absolute;
-    top: 20px;
-    right: 20px; }
-  .sideMenu_usernameBox {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    gap: 10px; }
-  .sideMenu_menu {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 10px; }
-  .sideMenu_optionBox {
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 5px; }
-    .sideMenu_optionBox--img {
-      width: 30px;
-      max-width: 50px;
-      min-height: 30px;
-      max-height: 50px; }
