--- a/src/sass/wallPage.scss
+++ b/src/sass/wallPage.scss
@@ -47,6 +47,12 @@
 
     &_footerMenu--icon{
         width: 20px;
+        max-width: 40px;
+        min-height: 20px;
+        max-height: 40px;
+        //background: url(../img/search.png) no-repeat center/ cover;
+        border-style: none;
+        cursor: pointer;
     }
 
 }
@@ -103,3 +109,74 @@
     }
 }
 
+.icon{
+    &_search{
+        background: url(../img/search.png) no-repeat center/ cover;
+    }
+    &_home{
+        background: url(../img/homeFooter.png) no-repeat center/ cover;
+    }
+    &_uploadPost{
+        background: url(../img/share.png) no-repeat center/ cover;
+    }
+    &_profile{
+        background: url(../img/user.png) no-repeat center/ cover;
+    }
+}
+
+.footerMenu_Hidden{
+    width: 0;
+}
+
+// #search{
+//     background: url(../img/search.png) no-repeat center;
+// }
+// #home{
+//     background: url(../img/homeFooter.png) no-repeat center;
+// }
+// #uploadPost{
+//     background: url(../img/share.png) no-repeat center;
+// }
+// #profile{
+//     background: url(../img/user.png) no-repeat center;
+// }
+
+@media (min-width: 1024px) {
+    .wallPage{
+        &_headerBox{
+            flex-direction: row;
+        }
+
+        
+        &_footerMenu{
+            top: 0;
+            width: 25%;
+            right: 0;
+            bottom: auto;
+            background: none;
+        }
+        &_menuHidden{
+            width: 0;
+        }
+    }
+
+    .sideMenu {
+        left: auto;
+    }
+
+    .icon{
+        &_search{
+            background: url(../img/searchPurple.png) no-repeat center/ cover;
+        }
+        &_home{
+            background: url(../img/homePurple.png) no-repeat center/ cover;
+        }
+        &_uploadPost{
+            background: url(../img/sharePurple.png) no-repeat center/ cover;
+        }
+        &_profile{
+            background: url(../img/profilePurple.png) no-repeat center/ cover;
+        }
+    }
+    
+}
