asigno funcion a l boton para subir post

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -24,3 +24,4 @@ body {
 @import url('./landingPage.css');
 @import url('./wallPage.css');
 @import url('./sideMenu.css');
+@import url('./uploadPost.css');
