--- a/src/sass/uploadPost.scss
+++ b/src/sass/uploadPost.scss
@@ -23,6 +23,7 @@
         width: 300px;
         max-width: 500px;
         min-height: 400px;
+        padding: 20px 0;
         @include flex-column-center;
         gap: 30px;
         border-radius: 10px;
@@ -31,12 +32,28 @@
 
     &_img{
         width: 70%;
+        // min-height: 150px;
+        // max-height: 250px;
+        border: 1px solid grey;
+        border-radius: 10px;
+        padding: 20px;
+        // background: rgb(247, 247, 247);
+    }
+
+    &_previewContainer{
+        width: 70%;
         min-height: 150px;
         max-height: 250px;
         border: 1px solid grey;
         border-radius: 10px;
         padding: 20px;
         background: rgb(247, 247, 247);
+    }
+
+    &_preview{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
     }
 
     &_text{
