--- a/src/styles/uploadPost.css
+++ b/src/styles/uploadPost.css
@@ -16,6 +16,7 @@
     width: 300px;
     max-width: 500px;
     min-height: 400px;
+    padding: 20px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,12 +26,21 @@
     background-color: aliceblue; }
   .uploadPost_img {
     width: 70%;
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding: 20px; }
+  .uploadPost_previewContainer {
+    width: 70%;
     min-height: 150px;
     max-height: 250px;
     border: 1px solid grey;
     border-radius: 10px;
     padding: 20px;
     background: #f7f7f7; }
+  .uploadPost_preview {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; }
   .uploadPost_text {
     width: 80%;
     min-height: 40px;
