--- a/src/sass/uploadPost.scss
+++ b/src/sass/uploadPost.scss
@@ -20,10 +20,11 @@
     background-color: rgba(0, 0, 0, 0.3);
 
     &_container{
-        width: 300px;
+        width: 80%;
+        min-width: 300px;
         max-width: 500px;
         min-height: 400px;
-        padding: 20px 0;
+        padding: 20px 40px;
         @include flex-column-center;
         gap: 30px;
         border-radius: 10px;
@@ -31,9 +32,6 @@
     }
 
     &_img{
-        width: 70%;
-        // min-height: 150px;
-        // max-height: 250px;
         border: 1px solid grey;
         border-radius: 10px;
         padding: 20px;
@@ -41,23 +39,20 @@
     }
 
     &_previewContainer{
-        width: 70%;
-        min-height: 150px;
-        max-height: 250px;
+        max-width: 200px;
+        height: 200px;
         border: 1px solid grey;
         border-radius: 10px;
-        padding: 20px;
         background: rgb(247, 247, 247);
     }
 
     &_preview{
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: cover;
     }
 
     &_text{
-        width: 80%;
         min-height: 40px;
         max-height: 60px;
         padding: 5px 10px;
