--- a/src/styles/uploadPost.css
+++ b/src/styles/uploadPost.css
@@ -13,10 +13,11 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.3); }
   .uploadPost_container {
-    width: 300px;
+    width: 80%;
+    min-width: 300px;
     max-width: 500px;
     min-height: 400px;
-    padding: 20px 0;
+    padding: 20px 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,24 +26,20 @@
     border-radius: 10px;
     background-color: aliceblue; }
   .uploadPost_img {
-    width: 70%;
     border: 1px solid grey;
     border-radius: 10px;
     padding: 20px; }
   .uploadPost_previewContainer {
-    width: 70%;
-    min-height: 150px;
-    max-height: 250px;
+    max-width: 200px;
+    height: 200px;
     border: 1px solid grey;
     border-radius: 10px;
-    padding: 20px;
     background: #f7f7f7; }
   .uploadPost_preview {
     width: 100%;
     height: 100%;
-    object-fit: contain; }
+    object-fit: cover; }
   .uploadPost_text {
-    width: 80%;
     min-height: 40px;
     max-height: 60px;
     padding: 5px 10px;
