--- a/src/styles/wallPage.css
+++ b/src/styles/wallPage.css
@@ -102,7 +102,8 @@
     background: #f7f7f769; }
   .postContainer_postImage--img {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    object-fit: cover; }
 
 .icon_search {
   background: url(../img/search.png) no-repeat center/cover; }
