--- a/src/styles/wallPage.css
+++ b/src/styles/wallPage.css
@@ -85,10 +85,10 @@
     font-style: italic; }
   .postContainer_interactionBox {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    gap: 5px; }
+    justify-content: space-between;
+    gap: 5px;
+    width: 100%;
+    padding: 0px 20px; }
   .postContainer_icon {
     width: 20px;
     height: 20px; }
