se puede ediar el post

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -25,3 +25,4 @@ body {
 @import url('./wallPage.css');
 @import url('./sideMenu.css');
 @import url('./uploadPost.css');
+@import url('./editPost.css');
