--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -5,7 +5,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  justify-content: flex-start;
   position: relative; }
   .profilePage_headerBox {
     width: 100%;
@@ -26,12 +25,14 @@
     width: 30px; }
   .profilePage_usernameBox {
     width: 80%;
+    max-width: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
     gap: 15px;
-    margin-top: 60px; }
+    margin-top: 60px;
+    justify-content: flex-start; }
   .profilePage_imgUsername {
     width: 60px;
     height: 60px;
@@ -82,3 +83,25 @@
 
 .footerMenu_Hidden {
   width: 0; }
+
+@media (min-width: 1024px) {
+  .profilePage_headerBox {
+    flex-direction: row; }
+  .profilePage_footerMenu {
+    top: 0;
+    width: 25%;
+    right: 0;
+    bottom: auto;
+    background: none; }
+  .profilePage_menuHidden {
+    width: 0; }
+  .sideMenu {
+    left: auto; }
+  .icon_search {
+    background: url(../img/searchPurple.png) no-repeat center/cover; }
+  .icon_home {
+    background: url(../img/homePurple.png) no-repeat center/cover; }
+  .icon_uploadPost {
+    background: url(../img/sharePurple.png) no-repeat center/cover; }
+  .icon_profile {
+    background: url(../img/profilePurple.png) no-repeat center/cover; } }
