--- a/src/sass/editComment.scss
+++ b/src/sass/editComment.scss
@@ -26,9 +26,11 @@
     }
 
     &_text{
-        width: 80%;
+        width: 90%;
         border: 1px solid grey;
-        border-radius: 10px;
-        padding: 20px;
+        border-radius: 5px;
+        padding: 5px 10px;
+        border: none;
+        background: #d2d2d2;
     }
 }
