--- a/src/styles/editComment.css
+++ b/src/styles/editComment.css
@@ -26,7 +26,9 @@
     border-radius: 10px;
     background-color: aliceblue; }
   .editComment_text {
-    width: 80%;
+    width: 90%;
     border: 1px solid grey;
-    border-radius: 10px;
-    padding: 20px; }
+    border-radius: 5px;
+    padding: 5px 10px;
+    border: none;
+    background: #d2d2d2; }
